wp-content/themes/sydneytheme/src/sass/slider.scss
.slider {
    max-width: 100%;
    position: relative;
    overflow: hidden;
    // set this flex so that you dont need to use position absolute, so the height is respected. But so the slides are in a row and not stacked.
    display: flex;

    @include breakpoint(tablet) {
        height: 670px;
        // change slides to be on top of each other so they slide over.
    }

    @include breakpoint(largedesktop) {
        height: 870px;
    }
    
    &__slide-wrapper {
        position: relative;
        left: 0;
        width: 100%;
        min-width: 100vw;
        transition: all 0.75s ease;

        // change from relative as now one slide needs to slide over another, so need to be on top of each other. 
        @include breakpoint(tablet) {
            position: absolute;
        }

        // default slide positions**********

        // the slide that is always on top
        &:first-child {
            z-index: 3;

            @include breakpoint(tablet) {
                left: 0;
            }

            .slider__image {
                @keyframes fadein {
                    0%   { opacity: 0.7; }
                    100% { opacity: 1; }
                }
    
                animation: fadein 1s;
                animation-iteration-count: 1;
                animation-timing-function: ease-in-out;

                @include breakpoint(tablet) {
                    animation: none;
                }
            }
        }

        // the slide that is always next
        &:nth-child(2) {
            z-index: 2;

            // only do after tablet size as smaller screens have the content box at the bottom. And so smaller screen should only have the image animate.
            @include breakpoint(tablet) {
                left: -100vw;
            }
        }

        // the slide that is always in the background 
        &:last-child {
            z-index: 1;

            @include breakpoint(tablet) {
                left: 0;
            }
        }

        // reset slide positions when previous button is clicked, the animations are different as it is the previous slide we need to transition in.******

        // this slide is alway in the background 
        &.previous:first-child {
            z-index: 3;
        }

        // this slide is always current on screen at top
        &.previous:nth-child(2) {
            z-index: 3;
        }

        // this slide is always the one off screen waiting to slide in
        &.previous:last-child {
            z-index: 2;
        }

        &.next:first-child .slider__content-box {
            @include breakpoint(tablet) {

                @keyframes slideright {
                    0%   { right: 530px; opacity: 0; }
                    100% { right: 130px; opacity: 1; }
                }

                animation: slideright 2.5s;
                animation-iteration-count: 1;
                animation-duration: 1.5s;
                animation-timing-function: ease;
            }

            .subtitle {
                &::after {
    
                    @include breakpoint(tablet) {
                        opacity: 0;

                        @keyframes linegrow {
                            0%   { max-width: 0; opacity: 0; }
                            100% { max-width: 86px; opacity: 1; }
                        }
    
                        animation: linegrow 4s;
                        animation-fill-mode: forwards;
                        animation-iteration-count: 1;
                        animation-delay: 1s;
                        animation-duration: 2s;
                        animation-timing-function: ease-in-out;
                    }
                }
            }
        }
    }

    &__image {
        width: 100%;
        height: 280px;
        // need object fit to retain aspect ratio
        object-fit: cover;
        object-position: left;
        position: relative;

        @include breakpoint(tablet) {
            height: 670px;
            position: absolute;
        }

        @include breakpoint(largedesktop) {
            height: 870px;
        }
    }
  
    &__inner-slide-container {
        max-width: $site-width;
        margin: 0 auto;
        position: relative;
    }

    &__content-box {
        position: relative;
        margin-top: -4px;

        @include breakpoint(tablet) {
            position: absolute;
            top: 100px;
            right: 120px;
            margin-top: 0;
            max-width: 430px;
        }

        @include breakpoint(largedesktop) {
            max-width: 530px;
            right: 60px;
        }

        @include breakpoint(xlargedesktop) {
            right: 10px;
        }
    }

    &__content-box-inner {
        background: white;
        padding: 30px;

        @include breakpoint(tablet) {
            padding: 40px;
        }

        @include breakpoint(largedesktop) {
            padding: 82px;
        }

        // overwrite some of main default styles to be custom to this component
        .subtitle {
            font-size: 0.875em;
            padding-bottom: 30px;

            &::after {
                top: 4px;
                max-width: 86px;
            }
        }

        &--heading {
            text-transform: uppercase;
            padding: 10px 0 15px 0;
            font-family: $secondary-font-family;
            font-size: 24px;
            color: $font-color;

            @include breakpoint(tablet) {
                padding: 20px 0 30px 0;
                font-size: 2em; // 32px
            }
        
            @include breakpoint(desktop) {
                font-size: 46px;
            }
        
            @include breakpoint(largedesktop) {
                font-size: 3.250em; // 52px
            }
        }

        &--paragraph {
            padding-bottom: 20px;
            font-size: 0.875em;
            line-height: 1.8;

            @include breakpoint(tablet) {
                padding-bottom: 30px;
                max-width: 310px;
            }

            @include breakpoint(largedesktop) {
                padding-bottom: 65px;
            }
        }

        // overwrite some of main default styles to be custom to this component
        .sydney-button__with-icon {
            left: 0;
            transform: none;
            margin: 0 0 10px;
            padding: 20px 48px 20px 36px;
        }
    }  

    &__progress-bar {
        margin-top: 30px;
        font-family: $secondary-font-family;
        color: $font-color;
        font-size: em(20);
        letter-spacing: 4px;
        display: none;
        visibility: hidden;

        @include breakpoint(tablet) {
            display: flex;
            visibility: visible;
        }

        &--line {
            background: $primary-color;
            height: 1px;
            width: 100%;
            margin: 11px 20px;
        }
    }
}

// style next and previous arrow buttons ****

.slider__arrow--prev {
    position: absolute;
    top: 24%;
    transform: translateY(-24%);
    left: 0;
    z-index: 15;

    @include breakpoint(tablet) {
        top: 50%;
        transform: translateY(-50%);
    }

    // overwrite some of main default styles to be custom to this component
    .sydney-button__with-icon {
        margin: 0;
        padding: 22px;

        @include breakpoint(tablet) {
            padding: 32px;
        }
    }
}

.slider__arrow--next {
    position: absolute;
    top: 24%;
    transform: translateY(-24%);
    right: 0;
    z-index: 15;

    @include breakpoint(tablet) {
        top: 50%;
        transform: translateY(-50%);
    }

    // overwrite some of main default styles to be custom to this component
    .sydney-button__with-icon {
        margin: 0;
        padding: 22px;

        @include breakpoint(tablet) {
            padding: 32px;
        }
    }
}

